# coqui-tts-server-gui

./: .drone.yml  .gitignore  .gitmodules  README.md  requirements.txt  setup.cfg  setup.py
forms/: main_window.ui
install/: app.sh  app.spec  build_win.bat  tts_server_wrapper.sh  tts_server_wrapper.spec
src/coqui_tts_server_gui/: app.py  config.ini  tts_server_audio.py  tts_server_ctrl.py  tts_server_settings.py
src/coqui_tts_server_gui/gui/: main_window.py  main_window_ui.py
src/tts_server_wrapper/: tts_server_wrapper.py
