[metadata]
name=coqui-tts-server-gui
version=0.0.1
description=GUI for the Coqui AI TTS server
author=DigitOtter
author_email=digitotter@protonmail.com
license=MPL-2.0

[options]
include_package_data=True
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src
include=temp_build

[build_py]
build_lib=temp_build
