[metadata]
name = coqui_tts_server_gui
version = 0.0.1
description = GUI for the Coqui AI TTS server
author = DigitOtter
author_email = digitotter@protonmail.com
license = MPL-2.0

[options.entry_points]
console_scripts =
    coqui-tts-server-gui = coqui_tts_server_gui.app:main

[options]
packages = find:
package_dir=
    =src
zip_safe = True
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
coqui_tts_server_gui =
    *.txt
    *.rst
    *.ini
    *.ico